# Tasks-Airflow

./: .env.example  .gitignore  Dockerfile-airflow  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: coingecko.py  coingecko_top.py  spark_orchestration_dag.py
logs/scheduler/: latest
spark/: coingecko_spark_job.py
